--- a/css/basic.css
+++ b/css/basic.css
@@ -119,7 +119,8 @@ body
 #subcontent h1
 {
     font-size:16px;
-    margin: 10px;
+    margin: 5px;
+    padding-bottom:15px;
 }
 
 subcontent h2
@@ -130,9 +131,10 @@ subcontent h2
 
 #subcontent p
 {
-    margin:20px;
+    margin:5px;
     font-size:10px;
-    line-height:2;    
+    line-height:2;   
+    padding-bottom:15px;
 }
 
 #subcontent ul 
@@ -151,7 +153,7 @@ subcontent h2
 {
     clear:both;
     font-style:italic;
-    font-size:8px;
+    font-size:10px;
     padding: 10px 10px 15px;
     visibility:hidden;
 }
